
sources = files(
     'Config.cpp'
    ,'GlGlobeApp.cpp'
    ,'GlGlobeWindow.cpp'
    ,'GlSphereView.cpp'
    ,'MoonContext.cpp'
    ,'SphereGlArea.cpp'
    ,'SphereContext.cpp'
    ,'SunSet.cpp'
    ,'ConfigDialog.cpp'
    ,'BoundsDisplay.cpp'
    ,'GeoJsonGeometryHandler.cpp'
    ,'WeatherDialog.cpp'
    ,'Timer.cpp'
    ,'PlotDialog.cpp'
    ,'Moon.cpp'
    ,'TimezoneInfo.cpp'
    )

